--- a/ofsen/appsettings.json
+++ b/ofsen/appsettings.json
@@ -9,5 +9,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Eposta": {
+    "Server": "",
+    "Port": "",
+    "SenderName": "oguzsen.net",
+    "SenderEmail": "iletisim@oguzsen.net",
+    "Account": "",
+    "Password": "x x x x",
+    "Security": ""
+  }
 }
