--- a/ofsen/appsettings.json
+++ b/ofsen/appsettings.json
@@ -11,12 +11,12 @@
   },
   "AllowedHosts": "*",
   "Eposta": {
-    "Server": "",
-    "Port": "",
+    "Server": "127.0.0.1",
+    "Port": 25,
     "SenderName": "oguzsen.net",
     "SenderEmail": "iletisim@oguzsen.net",
     "Account": "",
     "Password": "x x x x",
-    "Security": ""
+    "Security": true
   }
 }
