--- a/ofsen/appsettings.json
+++ b/ofsen/appsettings.json
@@ -18,5 +18,10 @@
     "Account": "",
     "Password": "x x x x",
     "Security": true
-  }
+  },
+  "Kurulum": {
+    "AdminEmail": "oguz.sen@outlook.com",
+    "AdminKulAdi": "Oguz",
+    "AdminPass": "KaraMaslak.35"
+  } 
 }
