Bitiyor az kaldı..

--- a/ofsen/appsettings.json
+++ b/ofsen/appsettings.json
@@ -22,6 +22,6 @@
   "Kurulum": {
     "AdminEmail": "oguz.sen@outlook.com",
     "AdminKulAdi": "Oguz",
-    "AdminPass": "KaraMaslak.35"
+    "AdminPass": "KaraMas.35"
   } 
 }
